feat: creating route to create new video and edit video

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -53,6 +53,12 @@
     * {
       @apply border-border;
     }
+    *::-webkit-scrollbar{
+      @apply w-2 bg-secondary
+    }
+    *::-webkit-scrollbar-thumb{
+      @apply w-2 bg-transparent rounded-md
+    }
     body {
       @apply bg-background text-foreground;
     }
